--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="#container" class="navbar-logo">CurrencyConverter</a>
+            <a href="#container" class="navbar-logo">Debbie Xchange</a>
             <div class="navbar-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
