overall design and working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navbar -->
 <!-- Navbar -->
 <nav class="navbar">
     <div class="nav-content">
@@ -214,7 +213,7 @@
                 <button class="calc-btn">.</button>
                 <button class="calc-btn" id="equal">=</button>
                 <button class="calc-btn">+</button>
-                <button class="calc-btn" id="clear">C</button> <!-- Clear button -->
+                <button class="calc-btn" id="clear">C</button> 
             </div>
         </section>
         
