--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Pro</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="x-icon" href="pic/5735271.png">
+    <link rel="shortcut icon" type="x-icon" href="img/exchange.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -23,6 +23,10 @@
             <li><a href="#how-to">How to Use</a></li>
             <li><a href="#calculator">Calculator</a></li>
         </ul>
+
+        <a href="https://www.capturecraft.site/" style="text-decoration: none;"><button class="nav-button">
+            <img src="img/image.webp" alt="captureCraft">
+            Visit captureCraft</button></a>
     </div>
 </nav>
 
