--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#calculator">Calculator</a></li>
         </ul>
 
-        <a href="https://www.capturecraft.site/" style="text-decoration: none;"><button class="nav-button">
+        <a href="https://www.capturecraft.site/" style="text-decoration: none;" target="_blank"><button class="nav-button">
             <img src="img/image.webp" alt="captureCraft">
             Visit captureCraft</button></a>
     </div>
