exchange rate graph

--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
             </div>
         </section>
 
+                <!-- Live Exchange Rate Graph -->
+        <section id="exchange-rate" class="exchange-rate">
+            <h2>Live Exchange Rates</h2>
+            <canvas id="exchangeRateGraph"></canvas>
+            <p>Exchange rates will be available soon. Stay tuned!</p>
+        </section>
+
+
         <!-- Calculator -->
         <section id="calculator" class="calculator">
             <h2>Calculator</h2>
@@ -226,5 +234,7 @@
     </footer>
 
     <script src="currency.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body> 
 </html>
