more currencies added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
                         <option value="UYU">Uruguayan Peso (UYU)</option>
                         <option value="VND">Vietnamese Dong (VND)</option>
                         <option value="ZAR">South African Rand (ZAR)</option>
+                        <option value="ALL">Albanian Lek (ALL)</option>
+                        <option value="AMD">Armenian Dram (AMD)</option>
+                        <option value="AZN">Azerbaijani Manat (AZN)</option>
+                        <option value="BAM">Bosnia-Herzegovina Convertible Mark (BAM)</option>
+                        <option value="BBD">Barbadian Dollar (BBD)</option>
+                        <option value="BIF">Burundian Franc (BIF)</option>
+                        <option value="BMD">Bermudian Dollar (BMD)</option>
+                        <option value="BND">Brunei Dollar (BND)</option>
+                        <option value="BOB">Bolivian Boliviano (BOB)</option>
+                        <option value="BTN">Bhutanese Ngultrum (BTN)</option>
+
                     </select>
                 </div>
                 <div class="input-group">
@@ -152,6 +163,17 @@
                         <option value="UYU">Uruguayan Peso (UYU)</option>
                         <option value="VND">Vietnamese Dong (VND)</option>
                         <option value="ZAR">South African Rand (ZAR)</option>
+                        <option value="ALL">Albanian Lek (ALL)</option>
+                        <option value="AMD">Armenian Dram (AMD)</option>
+                        <option value="AZN">Azerbaijani Manat (AZN)</option>
+                        <option value="BAM">Bosnia-Herzegovina Convertible Mark (BAM)</option>
+                        <option value="BBD">Barbadian Dollar (BBD)</option>
+                        <option value="BIF">Burundian Franc (BIF)</option>
+                        <option value="BMD">Bermudian Dollar (BMD)</option>
+                        <option value="BND">Brunei Dollar (BND)</option>
+                        <option value="BOB">Bolivian Boliviano (BOB)</option>
+                        <option value="BTN">Bhutanese Ngultrum (BTN)</option>
+
                     </select>
                 </div>
             </div>
