--- a/index.html
+++ b/index.html
@@ -270,8 +270,47 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Currency Pro. All rights reserved.</p>
-        <p>Designed with ❤️ for easy currency conversion</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#converter">Currency Converter</a></li>
+                    <li><a href="#exchange-rate-graph">Exchange Rates</a></li>
+                    <li><a href="#calculator">Calculator</a></li>
+                    <li><a href="#about">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Resources</h3>
+                <ul>
+                    <li><a href="#how-to">How to Use</a></li>
+                    <li><a href="#">Currency News</a></li>
+                    <li><a href="#">Rate Alerts</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <ul>
+                    <a href="mailto:calvintakasi@outlook.com" target="_blank" id="email"><li><i class="fas fa-envelope"></i>calvintakasi@naver.com</li></a>
+                    <li><i class="fas fa-phone"></i> ...</li>
+                    <li><i class="fas fa-map-marker-alt"></i> India</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <div class="social-links">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 CurrencyPro.</p>
+            <p>Designed with <i class="fas fa-heart"></i> for easy currency conversion</p>
+        </div>
     </footer>
 
     <script src="currency.js"></script>
