more currency pair added

--- a/index.html
+++ b/index.html
@@ -195,6 +195,17 @@
                 <option value="EUR-USD">EUR/USD</option>
                 <option value="GBP-USD">GBP/USD</option>
                 <option value="USD-JPY">USD/JPY</option>
+                <option value="AUD-USD">AUD/USD</option>
+                <option value="USD-CAD">USD/CAD</option>
+                <option value="USD-CHF">USD/CHF</option>
+                <option value="USD-CNY">USD/CNY</option>
+                <option value="USD-INR">USD/INR</option>
+                <option value="NZD-USD">NZD/USD</option>
+                <option value="USD-SGD">USD/SGD</option>
+                <option value="USD-HKD">USD/HKD</option>
+                <option value="EUR-GBP">EUR/GBP</option>
+                <option value="EUR-JPY">EUR/JPY</option>
+                <option value="GBP-JPY">GBP/JPY</option>
             </select>
             <select id="graph-timeframe">
                 <option value="1D">1 Day</option>
@@ -286,6 +297,7 @@
                     <li><a href="#how-to">How to Use</a></li>
                     <li><a href="#">Currency News</a></li>
                     <li><a href="#">Rate Alerts</a></li>
+                    <li><a href="#">Blog</a></li>
                     <li><a href="#">FAQs</a></li>
                 </ul>
             </div>
@@ -293,7 +305,6 @@
                 <h3>Contact Us</h3>
                 <ul>
                     <a href="mailto:calvintakasi@outlook.com" target="_blank" id="email"><li><i class="fas fa-envelope"></i>calvintakasi@naver.com</li></a>
-                    <li><i class="fas fa-phone"></i> ...</li>
                     <li><i class="fas fa-map-marker-alt"></i> India</li>
                 </ul>
             </div>
