--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <li><a href="#how-to">How to Use</a></li>
                     <li><a href="#">Currency News</a></li>
                     <li><a href="#">Rate Alerts</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="blog.html" target="_blank">Blog</a></li>
                     <li><a href="#">FAQs</a></li>
                 </ul>
             </div>
