--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 CurrencyPro.</p>
+            <p>CurrencyPro</p>
             <p>Designed with <i class="fas fa-heart"></i> for easy currency conversion</p>
         </div>
     </footer>
